Fix invisible/barely visible Go button in help webapp
This is coming from usage of deprecated css colors
(https://developer.mozilla.org/en-US/docs/Web/CSS/system-color#deprecated_system_color_keywords
) which Webkit seems to no longer support at all and Firefox has some
very basic and no longer good support.
Replaced the deprecated colors with their "analogs" as per that page.
Fixes https://github.com/eclipse-platform/eclipse.platform/issues/1823

--- a/ua/org.eclipse.help.webapp/advanced/list.css
+++ b/ua/org.eclipse.help.webapp/advanced/list.css
@@ -13,7 +13,7 @@
  *******************************************************************************/
 
 BODY {
-	color:WindowText;
+	color:CanvasText;
 	font: <%=prefs.getViewFont()%>;
 	font-size: .875rem;
 	margin-top:5px;
@@ -25,7 +25,7 @@ BODY {
 
 A {
 	text-decoration:none; 
-	color:WindowText; 
+	color:CanvasText; 
 	padding:0px;
 	white-space: nowrap;
 }
@@ -85,7 +85,7 @@ TABLE {
 
 .unselectedMenuItem {
 	background:<%=prefs.getToolbarBackground()%>;
-	color:WindowText;
+	color:CanvasText;
 	padding-left:10px;
 	padding-right:10px;
 }
